lightdash/overlays/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-lightdash
  namespace: lightdash
spec:
  gateways:
    - istio-ingress/istio-gateway  # Replace with your variables or specific values
  hosts:
    - lightdash.astrafy.io  # Replace with your variable or specific value
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: lightdash.lightdash.svc.cluster.local  # Replace with your variable or specific value
            port:
              number: 8080
